# Cnn_regression

./: .gitignore  .pre-commit-config.yaml  README.md  crop_part1.dvc  pyproject.toml
.dvc/: config
cnn_regression/: infer.py  main.py  train.py  trainloop.py
cnn_regression/Dataset/: CreateData.py  Dataset.py
cnn_regression/models/: model.py
cnn_regression/utils/: utils.py
configs/: config.yaml
mlruns/0/: meta.yaml
mlruns/0/05253dd1b80249139772238ce57e5fdc/: meta.yaml
mlruns/0/05253dd1b80249139772238ce57e5fdc/metrics/: l1  loss  mse  val_l1  val_mse
mlruns/0/05253dd1b80249139772238ce57e5fdc/tags/: mlflow.runName
mlruns/0/2968541c667d4955921cbd682fb21f92/: meta.yaml
mlruns/0/2968541c667d4955921cbd682fb21f92/metrics/: l1  loss  mse  val_l1  val_mse
mlruns/0/2968541c667d4955921cbd682fb21f92/tags/: mlflow.runName
mlruns/0/417b49e70eef4ba19e1c1afb8a3b9201/: meta.yaml
mlruns/0/417b49e70eef4ba19e1c1afb8a3b9201/metrics/: l1  loss  mse
mlruns/0/417b49e70eef4ba19e1c1afb8a3b9201/tags/: mlflow.runName
mlruns/0/52bcc3efe4ce43bc9aa21db9a8f5895b/: meta.yaml
mlruns/0/52bcc3efe4ce43bc9aa21db9a8f5895b/metrics/: l1  loss  mse  val_l1  val_mse
mlruns/0/52bcc3efe4ce43bc9aa21db9a8f5895b/tags/: mlflow.runName
mlruns/0/58fc1c0b76d6459eba789291773b0f4c/: meta.yaml
mlruns/0/58fc1c0b76d6459eba789291773b0f4c/metrics/: l1  loss  mse  val_l1  val_mse
mlruns/0/58fc1c0b76d6459eba789291773b0f4c/tags/: mlflow.runName
mlruns/0/80c512f55a2c4f7baf56373e12389cbd/: meta.yaml
mlruns/0/80c512f55a2c4f7baf56373e12389cbd/metrics/: l1  loss  mse  val_l1  val_mse
mlruns/0/80c512f55a2c4f7baf56373e12389cbd/tags/: mlflow.runName
mlruns/0/8d35f8e24e0c4ed8853ab6ac021ee56f/: meta.yaml
mlruns/0/8d35f8e24e0c4ed8853ab6ac021ee56f/metrics/: l1  loss  (+3 more)
mlruns/0/ecbce0a3b81b46ecb343f14f9c5d1e32/: meta.yaml
(+32 files in other folders)
