[tool.poetry]
name = "cnn-regression"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "10.0.1"
matplotlib = "3.8.0"
tqdm = "^4.66.1"
numpy = "1.24.4"
pandas = "1.3.5"
opencv-python-headless = "^4.8.0.76"
torch = "^2.0.1+cpu"
torchvision = "^0.15.2+cpu"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "primary"


[[tool.poetry.source]]
name = "torchvision"
url = "https://download.pytorch.org/whl/cpu"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
